--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "math-expression-evaluator": "^1.2.17",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "2.1.8"
   },
   "scripts": {
