--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "math-expression-evaluator": "^1.2.17",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +28,6 @@
   ],
   "devDependencies": {
     "gh-pages": "^2.0.1",
-    "node-sass": "^4.11.0",
-    "react-redux": "^7.0.3",
-    "redux-devtools": "^3.5.0"
+    "node-sass": "^4.11.0"
   }
 }
